--- a/formidable-csv-reader-popup.css
+++ b/formidable-csv-reader-popup.css
@@ -1,10 +1,8 @@
 #formidable-csv-reader-popup {
-    border: 3px solid #f1f1f1;
-    background-color: #FFF;
-    padding: 25px;
-    width: 90%;
-    max-height: 75%;
-    overflow-y: auto;
+    display: none;
+	top: 10%;
+	overflow: visible;
+    max-width: 90%;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
 }
